tests/speculation_error_codes/speculation_error_codes.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot call `get` because: [incompatible-call]
 - Either boolean [1] is incompatible with string [2].
 - Or boolean [1] is incompatible with number [3].

   test.js:3:1
   3| get(true); // incompatible-call
      ^^^

References:
   test.js:3:5
   3| get(true); // incompatible-call
          ^^^^ [1]
   test.js:1:27
   1| declare function get(key: string): void;
                                ^^^^^^ [2]
   test.js:2:27
   2| declare function get(key: number): void;
                                ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------ test.js:7:1

Cannot call `x` because: [incompatible-call]
 - Either null [1] is not a function.
 - Or number literal `3` [2] is not a function.

   test.js:7:1
   7| x(); // not-a-function
      ^

References:
   test.js:5:16
   5| declare var x: null & 3;
                     ^^^^ [1]
   test.js:5:23
   5| declare var x: null & 3;
                            ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:10:1

Cannot call `f` because boolean [1] is incompatible with number [2]. [incompatible-call]

   test.js:10:1
   10| f(true); // incompatible-call
       ^

References:
   test.js:10:3
   10| f(true); // incompatible-call
         ^^^^ [1]
   test.js:9:24
    9| declare var f: null & (number => void);
                              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:2

Cannot cast `y` to boolean because: [incompatible-cast]
 - Either number [1] is incompatible with boolean [2].
 - Or string [3] is incompatible with boolean [2].

   test.js:13:2
   13| (y : boolean) // incompatible-cast
        ^

References:
   test.js:12:17
   12| declare var y : number & string;
                       ^^^^^^ [1]
   test.js:13:6
   13| (y : boolean) // incompatible-cast
            ^^^^^^^ [2]
   test.js:12:26
   12| declare var y : number & string;
                                ^^^^^^ [3]



Found 4 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
